Add mobile response

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                         <img src="img/hero-carousel/1.jpg" alt="image" style="width: 100%;">
                     </div>
                     <div class="content fill">
-                        <h3>We crush your competitors, goals, and sales records - without the B.S.</h3>
-                        <a href="#" class="btn">get start</a>
+                        <h3>We Crush Your Competitors, Goals, And Sales Records - Without The B.S.</h3>
+                        <a href="#" class="btn">GET FREE CONSULTATION</a>
                     </div>
                 </div>
             </div>
@@ -47,143 +47,32 @@
     <!-- /home  -->
     <!-- about  -->
     <section class="about" id="about">
-        <div class="heading">
-            <h2>about</h2>
-            <div></div>
-        </div>
-
         <div class="box">
             <div class="image">
-                <img src="img/about/1.jpg" alt="image">
+                <img src="img/about/image 2.png" alt="image">
             </div>
             <div class="content">
-                <p>A company is more than just a piece of paper; it is brought to life by its people. Meet the team working to help your business thrive and realize its fullest potential. We believe that by leveraging our team's collective talents and dedication,
-                    you can overcome challenges, seize opportunities, and make your business flourish.</p>
+                <h2>Web & Mobile App Development</h2>
+                <p>Your web and mobile Apps are pieces of the puzzle to grow your<br> business. We use frameworks which tailor content and engagement <br> methods to respond to different intents shown by your potential <br> customers who interact with your business online.</p>
+                <a href="#" class="btn">Learn More</a>
             </div>
         </div>
     </section>
     <!-- /about  -->
-    <!-- services  -->
-    <section class="services" id="services">
-        <div class="heading">
-            <h2>our services </h2>
-            <div></div>
-        </div>
-
-        <div class="row">
-            <div class="box">
-                <i class="fa-solid fa-briefcase"></i>
-                <h3>
-                    Website Design & Development
-                </h3>
-                <p>Stay ahead of your competition with a fast, beautifully designed, high-converting website. You decide; we give you the designs first.</p>
-            </div>
-
-            <div class="box">
-                <i class="fa-solid fa-clipboard-check"></i>
-                <h3>
-                    Mobile App Development
-                </h3>
-                <p>Simplify complex user engagements and package them into a mobile app for enhanced customer experience. Keep your customers closer to you with a mobile app.</p>
-            </div>
-
-            <div class="box">
-                <i class="fa-solid fa-chart-column"></i>
-                <h3>
-                    Software Development
-                </h3>
-                <p>Streamline your operations with more intelligent cloud-based bespoke software solutions to reduce costs and improve efficiency.</p>
-            </div>
-
-            <div class="box">
-                <i class="fa-solid fa-binoculars"></i>
-                <h3>
-                    Social Marketer
-                </h3>
-                <p>will have to make sure the prototype looks finished by inserting text or photo.make sure the prototype looks finished by.</p>
-            </div>
-
-            <div class="box">
-                <div class="content">
-                    <i class="fa-solid fa-sun"></i>
-                    <h3>
-                        Seo Expart
-                    </h3>
-                </div>
-                <p>will have to make sure the prototype looks finished by inserting text or photo.make sure the prototype looks finished by.</p>
-            </div>
-
-            <div class="box">
-                <div class="content">
-                    <i class="fa-solid fa-calendar"></i>
-                    <h3>
-                        24/7 Support
-                    </h3>
-                </div>
-                <p>will have to make sure the prototype looks finished by inserting text or photo.make sure the prototype looks finished by.</p>
-            </div>
-        </div>
-    </section>
-    <!-- /services  -->
     <!-- careeers  -->
-    <section class="about" id="careeers">
-        <div class="heading">
-            <h2>Careeers</h2>
-            <div></div>
-        </div>
-
+    <section class="about1" id="careeers">
         <div class="box">
-            <div class="image">
-                <img src="img/careeers/1.jpg" alt="image">
-            </div>
             <div class="content">
-                <p>A company is more than just a piece of paper; it is brought to life by its people. Meet the team working to help your business thrive and realize its fullest potential. We believe that by leveraging our team's collective talents and dedication,
-                    you can overcome challenges, seize opportunities, and make your business flourish.</p>
-                <a href="#" class="btn">join with us</a>
+                <h2>Digital Strategy Consulting</h2>
+                <p>Your digital strategy should complement the overall marketing strategy of the company. In online marketing, each component will never work in isolation and every business needs a different mix. We provide a clear concept and strategic overview to find the most efficient model for your business.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+            <div class="image">
+                <img src="img/careeers/image 1.png" alt="image">
             </div>
         </div>
     </section>
     <!-- /careeers  -->
-    <!-- contact  -->
-    <section class="contact" id="contact">
-        <div class="heading">
-            <h2>contact us</h2>
-            <div></div>
-        </div>
-        <div class="box">
-            <div class="content">
-                <i class="fa-solid fa-mobile-screen"></i>
-                <div>call: +94123456789</div>
-                <div>monday-friday (9am-spm) </div>
-            </div>
-            <div class="content">
-                <i class="fa-solid fa-envelope"></i>
-                <div>email: atdigital@gmail.com</div>
-                <div>web: www.atdigital.com</div>
-            </div>
-            <div class="content">
-                <i class="fa-solid fa-location-dot"></i>
-                <div>location: Colombo</div>
-                <div>Sri Lanka</div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="ifarm">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d150757.98926928034!2d79.8806885932035!3d6.815939624868216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2506e94591417%3A0x3970af62b667f3de!2sMaharagama%20Town%2C%20Maharagama!5e0!3m2!1sen!2slk!4v1702795265347!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-            <div class="form-c">
-                <form action="">
-                    <input type="text" placeholder="name">
-                    <input type="email" placeholder="email">
-                    <input type="number" placeholder="phone">
-                    <textarea name="" id="" cols="30" rows="10"></textarea>
-                    <input type="submit" value="send message">
-                </form>
-            </div>
-        </div>
-    </section>
-    <!-- /contact  -->
     <!-- footer  -->
     <footer class="footer">
         <div class="content">
